# elysium

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  HEADER-APACHE2  README.md  changelog.md  docker-compose.yml  elysiumSpecRaw.json  run-dev-build.txt  rust-toolchain.toml
.github/workflows/: docker-publish.yml
client/cli/: Cargo.toml
client/cli/src/frontier_db_cmd/: tests.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/kv/: worker.rs
client/mapping-sync/src/sql/: mod.rs
client/rpc/: Cargo.toml
client/rpc/src/: lib.rs
client/rpc/src/cache/: mod.rs
client/rpc/src/eth/: block.rs  execute.rs  fee.rs  mod.rs  submit.rs  transaction.rs
client/rpc/src/eth/cache/: mod.rs
client/rpc/src/overrides/: mod.rs
docs/: node-template-release.md
frame/base-fee/src/: lib.rs
frame/dynamic-fee/src/: lib.rs
frame/elysium/: Cargo.toml
frame/elysium/src/: lib.rs
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs
frame/evm/: Cargo.toml
frame/evm-sponsor/: Cargo.toml
frame/evm-sponsor/src/: lib.rs
frame/evm/src/: lib.rs  tests.rs
frame/evm/src/runner/: stack.rs
frame/gasless/: Cargo.toml
frame/gasless/src/: lib.rs
frame/sponsor/: Cargo.toml
frame/sponsor/src/: lib.rs
frame/substrate-validator-set/: Cargo.toml
frame/substrate-validator-set/src/: lib.rs  mock.rs  tests.rs
frame/substrate-validator-set2/: Cargo.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  client.rs  command.rs  eth.rs  main.rs  rpc.rs  service.rs
node/src/rpc/: mod.rs
pallets/elysium/: Cargo.toml
pallets/elysium/src/: lib.rs
pallets/session/: Cargo.toml
pallets/session/benchmarking/: Cargo.toml
pallets/session/benchmarking/src/: lib.rs
pallets/session/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/session/src/historical/: mod.rs  offchain.rs  onchain.rs  shared.rs
pallets/session/src/migrations/: mod.rs  v1.rs
pallets/substrate-validator-set/: Cargo.toml
pallets/substrate-validator-set/src/: lib.rs  mock.rs  tests.rs
precompiles/macro/src/precompile/: attr.rs
precompiles/tests-external/: lib.rs
primitives/ethereum/: Cargo.toml
primitives/ethereum/src/: lib.rs
primitives/evm/src/: lib.rs
primitives/rpc/src/: lib.rs
primitives/storage/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: impls.rs  lib.rs  precompiles.rs
scripts/: benchmark.sh
template/: Dockerfile  README.md
template/node/: Cargo.toml
template/node/src/: benchmarking.rs  chain_spec.rs  client.rs  command.rs  eth.rs  service.rs
template/node/src/rpc/: mod.rs
template/runtime/: Cargo.toml
template/runtime/src/: impls.rs  lib.rs
ts-tests/: package-lock.json  package.json
ts-tests/tests/: config.ts  test-balance.ts  test-block.ts  test-bloom.ts  test-contract-methods.ts  test-contract-storage.ts  test-contract.ts  test-execute.ts  test-fee-history.ts  test-filter-api.ts  test-gas.ts  test-log-filtering.ts  test-log-tags.ts  test-max-priority-fee-per-gas-rpc.ts  test-nonce.ts  test-pending-pool.ts  test-precompiles.ts  test-revert-reason.ts  test-revert-receipt.ts  test-state-override.ts  test-subscription.ts  test-transaction-priority.ts  test-transaction-version.ts  txpool.ts  util.ts
ts-tests/ts-tests/: package.json
ts-tests/ts-tests/tests/: config.ts  test-balance.ts  test-block.ts  test-bloom.ts  test-contract-methods.ts  test-contract-storage.ts  test-contract.ts  test-execute.ts  test-filter-api.ts  test-gas.ts  test-log-filtering.ts  test-log-tags.ts  test-nonce.ts  test-pending-pool.ts  test-precompiles.ts  test-revert-reason.ts  test-revert-receipt.ts  test-state-override.ts  test-transaction-priority.ts  test-transaction-version.ts  txpool.ts  util.ts
